# cyclingdb

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: main.py
src/cyclingdb/data/: loader.py
src/cyclingdb/search/: engine.py
