[project]
name = "cyclingdb"
version = "0.1.0"
description = "Pro Cycling Manager 25 Database Search App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "streamlit>=1.46.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cyclingdb"]
include = ["src/cyclingdb/data/*"]
